// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsTitle should render 1`] = `
<span
  className="tc-subheader-details-text"
>
  <span
    className="subheader-details-icon-container"
  >
    <h1
      className="subheader-details-title"
    >
      myTitle
    </h1>
    <Action
      bsStyle="link"
      className="subheader-details-pencil"
      hideLabel={true}
      icon="talend-pencil"
      label="Modify"
      name="action-edit-title"
      onClick={[Function]}
    />
  </span>
  <small
    className="subheader-details-subtitle"
  >
    mySubTitle
  </small>
</span>
`;

exports[`DetailsTitle should render an Action 1`] = `
<span
  className="tc-subheader-details-text"
>
  <span
    className="subheader-details-icon-container"
  >
    <h1
      className="subheader-details-title"
    >
      myTitle
    </h1>
    <Action
      bsStyle="link"
      className="subheader-details-pencil"
      hideLabel={true}
      icon="talend-pencil"
      label="Modify"
      name="action-edit-title"
      onClick={[Function]}
    />
  </span>
</span>
`;

exports[`DetailsTitle should render with subTitle 1`] = `
<span
  className="tc-subheader-details-text"
>
  <span
    className="subheader-details-icon-container"
  >
    <h1
      className="subheader-details-title"
    >
      myTitle
    </h1>
  </span>
  <small
    className="subheader-details-subtitle"
  >
    mySubTitle
  </small>
</span>
`;

exports[`DetailsTitle should render with title 1`] = `
<span
  className="tc-subheader-details-text"
>
  <span
    className="subheader-details-icon-container"
  >
    <h1
      className="subheader-details-title"
    >
      myTitle
    </h1>
  </span>
</span>
`;

exports[`EditTitle should render 1`] = `
<form
  className="tc-subheader-form"
>
  <input
    autoFocus={true}
    className="subheader-input form-control"
    id="inputTitle"
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="value"
  />
  <div
    className="subheader-form-icon-container"
  >
    <Action
      bsStyle="link"
      className="subheader-form-icon"
      hideLabel={true}
      icon="talend-check"
      label="Submit"
      name="action-submit-title"
      onClick={[Function]}
    />
    <Action
      bsStyle="link"
      className="subheader-form-icon"
      hideLabel={true}
      icon="talend-cross"
      label="Cancel"
      name="action-cancel-title"
      onClick={[Function]}
    />
  </div>
</form>
`;

exports[`InputTitleSubHeader should render 1`] = `
<div
  className="tc-subheader-details"
>
  <Icon
    className="tc-subheader-title-icon"
    name="myIconFile"
  />
  <DetailsTitle
    t={[Function]}
    title="myTitle"
  />
</div>
`;
